--- a/src/index.html
+++ b/src/index.html
@@ -26740,13 +26740,13 @@
       //]]>
     </script>
     <script
-      src="js/jquery.min.js"
+      src="/js/jquery.min.js"
       type="text/javascript"
       crossorigin="anonymous"
     ></script>
    
     <script
-      src="js/cfdc19dfbfed996b51e054257d56a05c.js"
+      src="/js/cfdc19dfbfed996b51e054257d56a05c.js"
       type="text/javascript"
       crossorigin="anonymous"
     ></script>
