--- a/src/index.html
+++ b/src/index.html
@@ -26739,16 +26739,7 @@
       ]);
       //]]>
     </script>
-    <script
-      src="/js/jquery.min.js"
-      type="text/javascript"
-     
-    ></script>
-   
-    <script
-      src="/js/cfdc19dfbfed996b51e054257d56a05c.js"
-      type="text/javascript"
-      
-    ></script>
+   <script type="module" src="./js/jquery.min.js"></script>
+   <script type="module" src="./js/cfdc19dfbfed996b51e054257d56a05c.js"></script>
   </body>
 </html>
