--- a/src/index.html
+++ b/src/index.html
@@ -1664,7 +1664,7 @@
     </footer>  
 
     <div id="menu-curtain"></div>
-    <load src="./partials/burger.html"/>
+    <load src="/partials/burger.html"/>
     <script type="module" src="./js/module.js"></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
    <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
