--- a/src/index.html
+++ b/src/index.html
@@ -574,7 +574,8 @@
                     >
                   </div>
                 </h1>
-                <div class="search-area header-navegacao-color"><div id="busca-padrao" data-clarity-mask="true"><form name="busca-padrao" id="frmBusca" action="//g1.globo.com/busca/" method="get" accept-charset="utf-8">
+                <div class="search-area header-navegacao-color"><div id="busca-padrao" data-clarity-mask="true">
+                  <form name="busca-padrao" id="frmBusca" action="//g1.globo.com/busca/" method="get" accept-charset="utf-8">
                   <fieldset>
                     <input placeholder="BUSCAR" type="search" name="q" id="busca-campo" autocomplete="off" tabindex="1">
                     <input type="text" class="search-hint" id="search-hint" value="" tabindex="-1">
