--- a/src/index.html
+++ b/src/index.html
@@ -505,9 +505,10 @@
     </footer>  
     <div id="menu-curtain"></div>
     <load src="/partials/burger.html"/>
-
+    
+    <script type="module" src="./js/menu.js"></script> 
     <script type="module" src="./js/form.js"></script> 
-    <script type="module" src="./js/menu.js" defer ></script> 
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"></script>
