--- a/src/index.html
+++ b/src/index.html
@@ -505,7 +505,7 @@
     </footer>  
     <div id="menu-curtain"></div>
     <load src="/partials/burger.html"/>
-    
+
     <script type="module" src="./js/menu.js"></script> 
     <script type="module" src="./js/form.js"></script> 
     
@@ -513,7 +513,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/intlTelInput.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js"></script>
     <!-- <script type="module" src="./js/jquery.min.js"></script> -->
-    <script type="module" src="./js/cfdc19dfbfed996b51e054257d56a05c.js"></script>
+    <!-- <script type="module" src="./js/cfdc19dfbfed996b51e054257d56a05c.js"></script> -->
    
   
   </body>
